<resources>
    <string name="app_name">ProjetAndroid</string>
    <string name="menu_title">Menu Principal</string>
    <string name="btn_play">Jouer</string>
    <string name="btn_highscores">Meilleurs Scores</string>
    <string name="label_score">Score :</string>
    <string name="label_lives">Vies :</string>
    <string name="hint_answer">Votre réponse</string>
    <string name="btn_submit">Valider</string>
    <string name="default_question">\? + \?</string>
    <string name="btn_back_menu">Retour au Menu</string>
    <string name="fact_loading">Recherche d\'une anecdote...</string>
    <string name="fact_error">Impossible de récupérer l\'anecdote.</string>
    <string name="fact_title">Anecdote culturelle pour apprendre :</string>
    <string name="btn_features">Nos Ajouts</string>
    <string name="title_features">Fonctionnalités Bonus</string>
    <string name="features_list">- Système de Ligues (Bronze à Légende)\n- Timer de 10 secondes par calcul\n- Appel réseau HTTPS (API Anecdotes)\n- Base de données SQLite locale</string>

    <string name="timer_text">Temps : </string>
    <string name="btn_quit">Quitter</string>
    <string name="dialog_quit_title">Quitter la partie ?</string>
    <string name="dialog_quit_msg">Ton score actuel ne sera pas sauvegardé.</string>
    <string name="btn_yes">Oui</string>
    <string name="btn_no">Non</string>
</resources>