<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tvLives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lives"
        android:textSize="20sp"
        android:textColor="#E53935"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_score"
        android:textSize="20sp"
        android:textColor="#43A047"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_question"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/etAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etAnswer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/hint_answer"
        android:inputType="numberSigned"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestion"
        android:layout_marginHorizontal="32dp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/btn_submit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAnswer"
        android:layout_marginHorizontal="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>